# ailinux

./: .gitignore  .gitignore.bak  README.md  adjust_hierarchy_with_debugger.py  ailinux-documentation_1.md  ailinuxdocumentation_2.md  alphaos.py  analyze.py  bigfiles.sh  cleanup.py  directory_structure.json  directory_structure.json.bak  file-sync-client.py  filestructure.md  fix_duplicate_code.py  fixed-path-script.py  fixes.patch  github  github.pub  large_files.json  large_files.json.bak  manual  package-lock.json  package.json  patch-v0.1.txt  postcode.sh  postlog.sh  project-documentation.md  pylint-fix.py  pylint-fix.py.bak  pylint_patcher.py  python-compatibility-fix.py  python-optimizer.py  readme  requirements.txt  requirements_log.txt  start.js  start.sh  structure.txt  uploadready.py  (+1 more)
backend/: ai_model.py  app.py  backend.js  hugging.py  requirements.txt
client/: activate.sh  adjust_hierarchy_with_debugger.py  adjust_hierarchy_with_debugger.py.bak  ailinux-fix.sh  alphaos.py  analyze.py  bigfiles.py  cleanup.py  directory_structure.json  file-sync-client.py  large_files.json  package.json  postlog.sh  python-fix.py  requirements.txt  start.js  start.js.bak  start.sh  start_venv.sh  uploadready.py  websocket-client.py  websocket_client.py
devtools/: .gitignore  bigfiles.py  cleanup.py  readme  (+4 more)
server/backend/: =4.30.0  Dockerfile  ai_model.py  ai_model.py.bak  app.py  constraints.txt  data_server.py  gpt4allinit.py  pyproject.toml  req.txt  requirements.txt  websocket-server.py
server/backend/ailinux_env/: pyvenv.cfg
server/backend/test/: pyvenv.cfg
(+71 files in other folders)
